fixing cropped slider bottom

--- a/wp-content/themes/perbanas/css/perbanas.css
+++ b/wp-content/themes/perbanas/css/perbanas.css
@@ -1582,7 +1582,7 @@ a.btn, a.btn:hover, a.btn:active, a.btn:visited {
         margin-top: -30px;
     }
     #partner-slider .partner-logo {
-        height: 150px;
+        height: 150px;#par
         display: table-cell;
         vertical-align: middle;
     }
@@ -1592,7 +1592,7 @@ a.btn, a.btn:hover, a.btn:active, a.btn:visited {
         }
     }
     #partner-slider img {
-        max-width: 100px;
+        max-width: 100%;
     }
     /* end of partner slider */
     /* probank mag */
